--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
       <title>HTML tables</title>
+
+      <style>
+        table, th, td {
+          border: 1px solid black;
+          padding:5px;
+          text-align: center;
+        }
+        </style>
 </head>
 <body>
     <table class="table">
@@ -35,6 +43,28 @@
             <td>Firstname 3</td>
             <td>Lastname 3</td>
             <td>mailaddress3@example.com</td>
+        </tr>
+    </table>
+
+<br><br><br>
+
+    <table class="">
+        <thead>
+            <tr>
+                <th>Item name</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tr>
+            <td>Item 1</td>
+            <td>Item 15$</td>
+        </tr>
+        <tr>
+            <td>Item 2</td>
+            <td>Item 15$</td>
+        </tr>
+        <tr>
+            <td colspan="2">Sum of items: 30$</td>
         </tr>
     </table>
 </body>
